[package]
name = "news"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.23", features = ["json"] }
tokio = { version = "1.47.1", features = ["full"] }
rss = "2.0"
axum = "0.8.4"
handlebars = "6.3.2"
serde = { version = "1.0.219", features = ["derive"] }
scraper = "0.24.0"
serde_json = "1.0.143"
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = "0.10.4"
rusqlite = { version = "0.37.0", features = ["bundled"] }
tokio-cron-scheduler = "0.14.0"
